--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "SET NODE_ENV=development& node src/index.js"
   },
   "repository": {
     "type": "git",
